Fix character head assets, add floating action buttons, realign

--- a/public/stylesheets/about.scss
+++ b/public/stylesheets/about.scss
@@ -97,21 +97,22 @@ $dino-head-desktop-size-delta: 80px;
     }
     .copy-head {
       >img {
-        max-width: 170px;
-        max-height: 170px;
+        max-width: 150px;
+        max-height: 150px;
+        margin: 20px 0;
       }
     }
     .copy-head-superhero {
       >img {
+        display: block;
+        margin: 0 auto;
         max-height: 135px;
       }
     }
     .ch-superhero-mobile {
       display: block;
-      margin: 0 40px;
       @include media-breakpoint-up(md) {
         display: none;
-        margin: 0;
       }
     }
     .ch-superhero-desktop {
@@ -130,13 +131,17 @@ $dino-head-desktop-size-delta: 80px;
       >img {
         display: block;
         margin: 0 auto;
-        max-width: 180px;
       }
     }
     .copy-head-below-points {
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 100%;
+      @include media-breakpoint-up(md) {
+        width: auto;
+      }
     }
 
     .talking {
